@@ -93,16 +93,14 @@ PyMODINIT_FUNC
 
 PyInit_aprmd5(void)
 {
-  // Allows new objects to be created
-  aprmd5_md5_type.tp_new = PyType_GenericNew;
-  // Initializes the type
+  // Initialize the type
   if (PyType_Ready(&aprmd5_md5_type) < 0)
     return NULL;
-
+  // Create the module
   PyObject* module = PyModule_Create(&aprmd5_module);
   if (NULL == module)
     return NULL;
-
+  // Make the md5 type available
   Py_INCREF(&aprmd5_md5_type);
   PyModule_AddObject(module, aprmd5_md5_type_name, (PyObject*)&aprmd5_md5_type);
 
@@ -114,16 +112,14 @@ PyInit_aprmd5(void)
 
 initaprmd5(void)
 {
-  // Allows new objects to be created
-  aprmd5_md5Type.tp_new = PyType_GenericNew;
-  // Initializes the type
+  // Initialize the md5 type
   if (PyType_Ready(&aprmd5_md5Type) < 0)
     return;
-
+  // Create the module
   PyObject* module = Py_InitModule("aprmd5", aprmd5_methods);
   if (NULL == module)
     return;
-
+  // Make the md5 type available
   Py_INCREF(&aprmd5_md5Type);
   PyModule_AddObject(module, "md5", (PyObject*)&aprmd5_md5Type);
 }
